--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body{
     font-family: "League Spartan";
     font-weight: 700;
 }
+.header_img{
+    background-image: url(../images/combined_shape.svg);
+    height: 156px;
+}
 /* league-spartan-500 - latin */
 @font-face {
     font-family: 'League Spartan';
@@ -51,9 +55,11 @@ body{
     padding: 0px 40px;
     background-color: #FFFFFF;
     box-shadow:  0px 15px 20px -5px rgba(13, 113, 130, 0.15);
-    border-left: #5CA5A5 solid 5px;
-    border-radius: 5px;
     margin-bottom: 24px;
+    border-radius: 5px;
+}
+.box_border{
+    border-left: #5CA5A5 solid 5px;
 }
 .job_box_logo{
     width: 88px;
@@ -61,6 +67,19 @@ body{
 }
 .job_box_right{
     display: flex;
+    align-items: center;
+}
+.photosnap_logo::before{
+    background-image: url(../images/photosnap.svg);
+    content: "";
+    width: 88px;
+    height: 88px;
+}
+.manage_logo{
+    background-image: url(../images/manage.svg);
+    content: "";
+    width: 88px;
+    height: 88px; 
 }
 .job_box_text{
     padding-left: 24px;
@@ -70,9 +89,17 @@ body{
     align-items: center;
     margin-bottom: 8px;
 }
-h1, h2{
-    display: none;
-}
+
+.visually-hidden {
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+  }
 h3{
     color: #5CA5A5;
     margin: 0px;
@@ -85,9 +112,11 @@ h3{
     background-color: #5CA5A5;
     border-radius: 12px;
     margin-right: 8px;
-    padding: 6px 8px 4px 8px;
+    padding: 5px 8px;
     font-size: 11px;
-
+}
+.item_color{
+    background-color: #2B3939;
 }
 h4{
     margin: 0px;
@@ -104,6 +133,7 @@ h4:hover{
     display: flex;
     padding-left: 0;
     margin: 0px;
+    list-style: none;
 }
 .job_box_item{
     margin-right: 32px;
@@ -120,7 +150,11 @@ h4:hover{
     margin-left: 16px;
 }
 .job_box_btn_text{
+    border: none;
     color: #5CA5A5;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 24px;
     text-decoration: none;
     padding: 4px 8px;
     background-color: #EFFAFA;
